--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,19 @@ theme: just-the-docs
 color_scheme: foo
 
 url: https://1000oaks.github.io
+
+callouts:
+  warning:
+    title: Warning
+    color: red
+  note:
+    title: Note
+    color: purple
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  highlight:
+    color: yellow
